<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summery"
            android:icon="@drawable/flash"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_banks"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/banks" />
        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/coins_48"
            android:title="@string/compare_prices" />
        <item
            android:id="@+id/nav_gold"
            android:icon="@drawable/gold_bar"
            android:title="@string/gold_prices" />
    </group>


    <group>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_48"
            android:title="@string/share" />
    </group>

</menu>
