<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_currency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?android:attr/colorBackground"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/currency_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/currency" />


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:id="@+id/activity_bank_detials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/activity_vertical_margin"
                tools:context="andrewhossam.se3reldollar.BankDetailsActivity">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adViewTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

                <TextView
                    android:id="@+id/select_currency_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/adViewTop"
                    android:text="@string/select_the_currency" />

                <Spinner
                    android:id="@+id/select_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/select_currency_textview" />

                <LinearLayout
                    android:id="@+id/heads"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/select_currency"
                    android:layout_margin="16dp"
                    android:clipToPadding="false"
                    android:elevation="6dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bank_name_column"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:drawableEnd="@drawable/sorting_arrows_24"
                        android:drawableRight="@drawable/sorting_arrows_24"
                        android:text="@string/the_bank"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/buy_column"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/sorting_arrows_16"
                        android:drawableRight="@drawable/sorting_arrows_16"
                        android:text="@string/buy"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/sell_column"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/sorting_arrows_16"
                        android:drawableRight="@drawable/sorting_arrows_16"
                        android:text="@string/sell"
                        android:textSize="18sp" />
                </LinearLayout>

                <ListView
                    android:id="@+id/currency_only_listview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heads" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adViewBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/currency_only_listview"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />


                <ProgressBar
                    android:id="@+id/progressBarCurrency"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share_action"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_share"
            android:visibility="gone"
            app:fabSize="normal"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="bottom|left" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_currency"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_navigation" />
</android.support.v4.widget.DrawerLayout>